RESOLVED FIXED308728
Crash under PC::Connection::sendMessage (MACH_SEND_TOO_LARGE / NetworkStorageManager_CacheStorageRetrieveRecordsReply)
https://bugs.webkit.org/show_bug.cgi?id=308728
Summary Crash under PC::Connection::sendMessage (MACH_SEND_TOO_LARGE / NetworkStorage...
Chris Dumez
Reported 2026-02-26 01:53:01 PST
Crash under PC::Connection::sendMessage (MACH_SEND_TOO_LARGE / NetworkStorageManager_CacheStorageRetrieveRecordsReply).
Attachments
Chris Dumez
Comment 1 2026-02-26 01:54:44 PST
Chris Dumez
Comment 2 2026-02-26 02:00:21 PST
EWS
Comment 3 2026-03-03 03:29:01 PST
Committed 308536@main (18f52512761f): <https://commits.webkit.org/308536@main> Reviewed commits have been landed. Closing PR #59497 and removing active labels.
EWS
Comment 4 2026-03-03 09:15:27 PST
Committed 305413.389@safari-7624-branch (ac5466ee0d20): <https://commits.webkit.org/305413.389@safari-7624-branch> Reviewed commits have been landed. Closing PR #4595 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.